<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SearchTestHost</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="begin_to_search">开始搜索</string>
    <string name="please_entry_password">请输入密码</string>
    <string name="password_is_wrong">密码不正确，请重新输入</string>

    <string name="connect_right">已建立连接</string>
    <string name="connect_bad">建立连接失败， 请检查网络或者密码是否正确</string>
    
    <string name="device_name">设备名称 :</string>
    <string name="device_lang">设备语言 :</string>
    <string name="device_time">设备时间 :</string>
    <string name="device_add">设备地址 :</string>
    <string name="device_audi">设备音量 :</string>
    <string name="device_contact">联系人</string>
    
    <string name="device_change_result_ok">修改成功</string>
    <string name="device_change_result_fail">修改失败</string>
    
    <string name="device_change">修改</string>
    <string name="device_quit">退出</string>
    <string name="device_contact_back">返回</string>
    
    <string name="device_audio_vaule_is_empty">音频值是空</string>
    <string name="device_audio_vaule_is_out_of_ranger">音频值超出范围 范围是 0 ~ %d</string>
    
    <string name="device_ip_address_wrong">ip地址不正确 请输入255.255.255.255 或 255.0.0.1样式地址</string>
    <string name="device_time_format_wrong">时间格式不正确</string>
    <string name="device_no_change">无修改</string>
</resources>
