<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.searchHost.MainActivity" >

    <Button
        android:id="@+id/bt_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:text="@string/begin_to_search"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_above="@+id/bt_search"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:visibility="gone"/>

    <TextView
		android:id="@+id/DeviceNameId" 
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_widget_height"
		android:gravity="center"
        android:layout_below="@+id/passwordEdit"
        android:layout_toEndOf="@+id/bt_search"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/device_name"
        android:textSize="@dimen/device_text_size"/>

    <TextView
        android:id="@+id/DeviceNameString" 
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_widget_height"
		android:gravity="center"
        android:layout_alignTop="@+id/DeviceNameId"
        android:layout_toEndOf="@+id/DeviceNameId"
        android:layout_marginStart="24dp"
        android:textSize="@dimen/device_text_size"/>

    <TextView
        android:id="@+id/DeviceIP" 
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_widget_height"
		android:gravity="center"
        android:layout_below="@+id/DeviceNameId"
        android:layout_alignStart="@+id/DeviceNameId"
        android:layout_marginTop="@dimen/device_up_down_distance"
        android:text="@string/device_add"
        android:textSize="@dimen/device_text_size"/>

    <TextView
		android:id="@+id/DeviceTime" 
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_widget_height"
		android:gravity="center"
        android:layout_below="@+id/DeviceIP"
        android:layout_alignStart="@+id/DeviceIP"
        android:layout_marginTop="@dimen/device_up_down_distance"
		android:text="@string/device_time"
		android:textSize="@dimen/device_text_size"/>

    <EditText
        android:id="@+id/DeviceTimeValue" 
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_widget_height"
        android:inputType="number"
        android:digits="0123456789-"
        android:ems="20"
        android:layout_alignBottom="@+id/DeviceTime"
        android:layout_alignStart="@+id/DeviceIPValue"
        android:layout_alignEnd="@+id/DeviceIPValue"
        android:layout_marginTop="33dp"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/DeviceLanauge"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_widget_height"
		android:gravity="center"
        android:layout_below="@+id/DeviceTimeValue"
        android:layout_alignStart="@+id/DeviceTime"
        android:layout_marginTop="@dimen/device_up_down_distance"
        android:text="@string/device_lang"
        android:textSize="@dimen/device_text_size" />

    <Spinner
        android:id="@+id/DeviceLangValue" 
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_spinner_height"
        android:layout_alignBottom="@+id/DeviceLanauge"
        android:layout_alignStart="@+id/DeviceTimeValue"
        android:layout_alignTop="@+id/DeviceLanauge" 
        />

    <TextView
        android:id="@+id/DeviceAudio"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_widget_height"
		android:gravity="center"
        android:layout_below="@+id/DeviceLanauge"
        android:layout_alignStart="@+id/DeviceLanauge"
        android:layout_marginTop="@dimen/device_up_down_distance"
        android:text="@string/device_audi"
        android:textSize="@dimen/device_text_size" />

    <Button
        android:id="@+id/DeviceTimeChangeButton" 
        android:layout_width="@dimen/device_button_width"
        android:layout_height="@dimen/device_widget_height"
		android:gravity="center"
        android:layout_alignBottom="@+id/DeviceTimeValue"
        android:layout_alignStart="@+id/DeviceIPChangeButton"
        android:text="@string/device_change"/>

    <Button
        android:id="@+id/DeviceLangButton" 
        android:layout_width="@dimen/device_button_width"
        android:layout_height="@dimen/device_widget_height"
		android:gravity="center"
        android:layout_alignBottom="@+id/DeviceLangValue"
        android:layout_alignStart="@+id/DeviceTimeChangeButton"
        android:text="@string/device_change"/>

    <Button
		android:id="@+id/DeviceAudioChangeButton"
        android:layout_width="@dimen/device_button_width"
        android:layout_height="@dimen/device_widget_height"
		android:gravity="center"
        android:layout_alignBottom="@+id/DeviceAudioVaule"
        android:layout_alignStart="@+id/DeviceLangButton"
        android:text="@string/device_change"/>

    <EditText
        android:id="@+id/DeviceIPValue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/device_widget_height"
        android:layout_above="@+id/DeviceTime"
        android:layout_alignStart="@+id/DeviceNameString"
        android:layout_toLeftOf="@+id/DeviceIPChangeButton"
        android:ems="15"
        android:inputType="number"
        android:digits="0123456789." />

    <EditText
        android:id="@+id/DeviceAudioVaule"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_widget_height"
        android:layout_alignBottom="@+id/DeviceAudio"
        android:layout_marginStart="20dp"
        android:layout_toRightOf="@+id/DeviceAudioType"
        android:layout_toLeftOf="@+id/DeviceAudioChangeButton"
        android:ems="3"
        android:inputType="number" />

    <Spinner
        android:id="@+id/DeviceAudioType"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_spinner_height"
        android:layout_alignBottom="@+id/DeviceAudio"
        android:layout_alignStart="@+id/DeviceLangValue"
        android:layout_alignTop="@+id/DeviceAudio" />

    <Button
        android:id="@+id/DeviceIPChangeButton"
        android:layout_width="@dimen/device_button_width"
        android:layout_height="@dimen/device_widget_height"
		android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/DeviceIPValue"
        android:layout_marginStart="@dimen/device_left_right_width"
        android:text="@string/device_change" />

    <Button
        android:id="@+id/button_quit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_widget_height"
        android:layout_alignLeft="@+id/DeviceAudioVaule"
        android:layout_alignTop="@+id/DeviceContact"
        android:text="@string/device_quit" />

    <Button
        android:id="@+id/DeviceContact"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/device_widget_height"
        android:layout_below="@+id/DeviceAudio"
        android:layout_marginTop="37dp"
        android:layout_toLeftOf="@+id/DeviceAudioType"
        android:gravity="center"
        android:text="@string/device_contact" />
    
    
    <TextView
        android:id="@+id/contact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/device_contact"
        android:textColor="@color/text_color"
        android:textSize="30sp"/>

    <ScrollView
        android:id="@+id/contact_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/contact_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <com.example.searchHost.ContactListView
				android:id="@+id/contact_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
    
	<Button
        android:id="@+id/contact_button_middle"
        android:layout_width="1px"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" 
        android:visibility="invisible"/>

    <Button
        android:id="@+id/contact_back_button"
        android:text="@string/device_contact_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/contact_button_middle"
        android:layout_toLeftOf="@+id/contact_button_middle"
        android:layout_alignBottom="@+id/contact_button_middle"
        android:layout_marginRight="40dp"/>

    <Button
        android:id="@+id/contact_change_button"
        android:text="@string/device_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/contact_button_middle"
        android:layout_toRightOf="@+id/contact_button_middle"
        android:layout_alignBottom="@+id/contact_button_middle"
        android:layout_marginLeft="40dp"/>

</RelativeLayout>
